toolchain/internal/core/analysis/testdata/errors/includes/Invalid_self.vdl
// @expect: E006

type User {
  name string
}
